--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             </div>
 
             <div class="centrado">
-                <input class="botones" type="button" onclick="parar()" value="parar"/>
-                <input class="botones" type="button" onclick="arranque()" value="arranque"/>
+                <input class="botones" type="button" onclick="parar()" value=" stop "/>
+                <input class="botones" type="button" onclick="arranque()" value="  run  "/>
             </div>
 
         </div>
