simple changes and bugs fix

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-    <heat>
+    <head>
         <meta charset="utf-8">
         <title>SimpleTimer</title>
         <script type="text/javascript" src="func.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
         <link href="style.css" rel="stylesheet">
-    </heat>
+    </head>
     <body onload="arranque()" class="cuerpo">
         <div class="principal">
             <div class="centrado">
